objects/Bid__c.object
<CustomObject>
    <fields>
        <fullName>Auction_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Auction ID</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bids</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Bid ID</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dealership_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealership ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Acct_Bids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Created Date</label>
        <type>DateTime</type>
    </fields>
    <label>Bid</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Bid_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Auction_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000000000}</displayFormat>
        <label>Bid Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>